syntax = "proto3";

package wishlist;
option go_package = "https://github.com/go-park-mail-ru/2024_2_kotyari/wishlist/grpc_gen";

message RemoveFromWishlistsRequest {
  uint32 user_id = 1;
  repeated string links = 2;
  uint32 product_id = 3;
}